# SpikingNeuralNetworkCPP

./: CMakeLists.txt  build.sh  charts.cpp  clean.sh  main.cpp  run.sh  test.neur
include/: FCN.hpp  Network.hpp  activation.hpp  block.hpp  config.hpp  encoder.hpp  initializer.hpp  layer.hpp  mutation.hpp  neuron.hpp  parallel.hpp  simd_vector.hpp
include/activation/: linear.hpp  relu.hpp  sigmoid.hpp
include/crossovers/: fastonepoint.hpp  onepoint.hpp
include/encoders/: number_encoder.hpp
include/initializers/: gauss.hpp  normalized_gauss.hpp
include/mutatiom/: gauss_mutation.hpp
include/neurons/: feedforwardneuron.hpp
sources/: FCN.cpp  Network.cpp  neuron.cpp  parallel.cpp  simd_vector.cpp
